ora ancora con più stile

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div>
           <ul>
-            <li :class="index % 2 ? 'white' : 'grey' " v-for="(item, index) in mailList">{{item}}</li>
+            <li :class="index % 2 ? 'grey' : 'white' " v-for="(item, index) in mailList">{{item}}</li>
           </ul>
         </div>
       </div>
